Fixing bug 200058, standalone images and plugins leak (the whole document leaks), r=jst sr=bz